Feat: Added the hero section to HTML

--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
             <button class="cta-button">Get Started</button>
         </div>
     </header>
+    <section class="hero">
+        <div class="container hero-container">
+            <div class="hero-content">
+                <h1>Create Beautiful Designs with DesignFlow</h1>
+                <p>Create Designs with ease. DesignFlow helps you with all the tools
+                    that you need to desing and also how to use them.</p>
+        <button class="cta-button">Learn More</button>
+            </div>
+            <div class="hero-image">
+                <img src="./images/Hero-img.jpg" alt="Hero-img">
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
