Feat: Edited the style of the Hero Class

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="navbar header-navbar">
+        <div class="container header-container">
             <div class="logo">Design<span>Flow</span></div>
             <nav>
                 <ul>
