Feat: Addead the Features section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,33 @@
             </div>
         </div>
     </section>
+
+    
+    <section class="features">
+        <div class="container">
+            <div class="section-title">
+                <h2>Our Amazing Features</h2>
+                <p>Discover how DesingFlow can transform your visual presence and intutive design</p>
+            </div>
+            <div class="features-container">
+                <div class="feature-box">
+                <div class="feature-icon">🖥️</div>
+                <h3>Adaptive Layouts</h3>
+                <p>Designs that automatically adjust to any screen size, giving users the best viewing experience.</p>
+                </div>
+                <div class="feature-box">
+                    <div class="feature-icon">⚡</div>
+                    <h3>Instant Rendering</h3>
+                    <p>Optimized for real-time updates and smooth performance, ensuring your designs load instantly.</p>
+                </div>
+                <div class="feature-box">
+                    <div class="feature-icon">🎨</div>
+                    <h3>Aesthetic Perfection</h3>
+                    <p>Crafted with modern UI/UX principles to make your designs look sleek and professional.</p>
+                </div>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
