--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         </div>
     </section>
 
-    
+
     <section class="features">
         <div class="container">
             <div class="section-title">
                 <h2>Our Amazing Features</h2>
-                <p>Discover how DesingFlow can transform your visual presence and intutive design</p>
+                <p>Discover how DesingFlow can transform your visual presence and intutive design.</p>
             </div>
             <div class="features-container">
                 <div class="feature-box">
