Feat: Added the cta-section Class

--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
             </div>
         </div>
     </section>
+
+    <section class="cta-section">
+        <div class="container">
+            <h2>Ready to Get Started?</h2>
+            <p>Join hundrets os individuals that trust DesignFlow to build their visual presence.
+                Create your design in minutes, not days.</p>
+                <button class="cta-button">Sign Up Now</div>
+        </div>
+    </section>
     
 </body>
 </html>
