Feat: Added the Footer and edited the responsive style of it

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Landing Pages</title>
     <link rel = "stylesheet" href="style.css">
 </head>
+
+
+
 <body>
     <header>
         <div class="container header-container">
@@ -73,4 +76,32 @@
     </section>
     
 </body>
+
+<footer>
+        <div class="container footer-container">
+            <div class="footer-logo">
+                <div class="logo">Design<span>Flow</span></div>
+                <p>DesignFlow helps you create beautiful designs with ease.</p>
+            </div>
+            <div class="footer-links">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h3>Contact Us</h3>
+                <p>Email: leotrimislami98@gmail.com</p>
+                <p>Phone: +38349 123456</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Leotrim Islami. All rights reserved.</p>
+        </div>
+    </footer>
+
 </html>
